--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "eslintConfig": {
     "extends": [
       "react-app",
+      "plugin:jsx-a11y/recommended",
       "react-app/jest"
-    ]
+    ],
+    "plugins": ["jsx-a11y"]
   },
   "browserslist": {
     "production": [
